project1/main.tf

resource "aws_vpc" "myvpc" {

cidr_block = var.cidr

}

resource "aws_subnet" "sub1" {

vpc_id = aws_vpc.myvpc.id

cidr_block = "192.168.1.0/24"

availability_zone = "ap-south-1a"

map_public_ip_on_launch = true

}

resource "aws_subnet" "sub2" {

vpc_id = aws_vpc.myvpc.id

cidr_block = "192.168.2.0/24"

availability_zone = "ap-south-1b"

map_public_ip_on_launch = true

}

resource "aws_internet_gateway" "igw" {

vpc_id = aws_vpc.myvpc.id

}

resource "aws_route_table" "RT" {

vpc_id = aws_vpc.myvpc.id

route {

cidr_block = "0.0.0.0/0"

gateway_id = aws_internet_gateway.igw.id

}
}

resource "aws_route_table_association" "rta1" {

subnet_id = aws_subnet.sub1.id

route_table_id = aws_route_table.RT.id

}

resource "aws_route_table_association" "rta2" {

subnet_id = aws_subnet.sub2.id

route_table_id = aws_route_table.RT.id

}

resource "aws_security_group" "sg" {

name = "web"

vpc_id = aws_vpc.myvpc.id

ingress {

description = "http from vpc"

from_port = 80

to_port = 80

protocol = "tcp"

cidr_blocks = ["0.0.0.0/0"]

}

ingress {

description = "ssh"

from_port = 22
to_port = 22
protocol ="tcp"
cidr_blocks = ["0.0.0.0/0"]

}

egress {

from_port = 0
to_port = 0
protocol = -1
cidr_blocks = ["0.0.0.0/0"]

}

tags = {

name = "web_sg"

}

}

resource "aws_s3_bucket" "mybucket" {


bucket = "aws-terraform-bkt-kusuma-test"

}

resource "aws_instance" "webserver1" {

ami = "ami-018046b953a698135"

instance_type = "t2.micro"

vpc_security_group_ids = [aws_security_group.sg.id]

subnet_id = aws_subnet.sub1.id

user_data_base64 = base64encode(file("userdata.sh"))

}

resource "aws_instance" "webserver2" {

ami = "ami-018046b953a698135"

instance_type = "t2.micro"

vpc_security_group_ids = [aws_security_group.sg.id]

subnet_id = aws_subnet.sub2.id

user_data_base64 = base64encode(file("userdata1.sh"))

}


resource "aws_lb" "myalb" {

name = "myalb"
internal = false
load_balancer_type = "application"
security_groups = [aws_security_group.sg.id]
subnets = [aws_subnet.sub1.id, aws_subnet.sub2.id]

tags = {

name = "web"

}
}

resource "aws_lb_target_group" "tg" {

name = "mytg"
port = 80
protocol = "HTTP"
vpc_id = aws_vpc.myvpc.id

health_check {

path = "/"
port = "traffic-port"
}
}
resource "aws_lb_target_group_attachment" "attach1" {
target_group_arn = aws_lb_target_group.tg.arn
target_id = aws_instance.webserver1.id
port = 80
}
resource "aws_lb_target_group_attachment" "attach2" {
target_group_arn = aws_lb_target_group.tg.arn
target_id = aws_instance.webserver2.id
port = 80
}

resource "aws_lb_listener" "listener" {

load_balancer_arn = aws_lb.myalb.arn
port = 80
protocol = "HTTP"

default_action {
target_group_arn = aws_lb_target_group.tg.arn
type = "forward"
}
}

output "loadbalancerdns" {

value = aws_lb.myalb.dns_name

}


output "tg_arn" {
  value = aws_lb_target_group.tg.arn
}
